# ai-native-storage-certus

./: .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md
apps/extent-benchmark/: Cargo.toml  README.md
apps/extent-benchmark/src/: config.rs  main.rs  report.rs  stats.rs  worker.rs
apps/gpu-handle-test-server/: Cargo.toml  README.md
apps/gpu-handle-test-server/src/: main.rs
apps/gpu-show/: Cargo.toml
apps/gpu-show/src/: main.rs
apps/iops-benchmark/: Cargo.toml  README.md
apps/iops-benchmark-md/: Cargo.toml
apps/iops-benchmark-md/src/: config.rs  lba.rs  main.rs  report.rs  stats.rs  worker.rs
apps/iops-benchmark/src/: config.rs  lba.rs  main.rs  report.rs  stats.rs  worker.rs
components/block-device-spdk-nvme/v1/: CLAUDE.md  Cargo.toml  README.md
components/block-device-spdk-nvme/v1/benches/: latency.rs  throughput.rs
components/block-device-spdk-nvme/v1/info/: DESIGN.md  PROMPT.md
components/block-device-spdk-nvme/v1/src/: actor.rs  command.rs  controller.rs  lib.rs  namespace.rs  qpair.rs  telemetry.rs
components/block-device-spdk-nvme/v1/tests/: integration.rs
components/block-device-spdk-nvme/v2/: CLAUDE.md  Cargo.toml  README.md
components/block-device-spdk-nvme/v2/.claude/: settings.json
components/block-device-spdk-nvme/v2/.specify/: feature.json
components/block-device-spdk-nvme/v2/benches/: latency.rs  throughput.rs
components/block-device-spdk-nvme/v2/info/: FUNCTIONAL-DESIGN.md  PROMPT.md  transcript_64226319-3a0a-4cc7-bab1-78bed6de4dbe_2026-04-23.md  transcript_a2f6b036-707c-42ee-9862-382bed91470c_2026-04-27.md
components/block-device-spdk-nvme/v2/src/: actor.rs  command.rs  controller.rs  lib.rs  qpair.rs  tsc.rs
components/block-device-spdk-nvme/v2/tests/: integration.rs
components/dispatch-map/v0/: CLAUDE.md  Cargo.toml  README.md  VERIFICATION.md
components/dispatch-map/v0/.claude/: settings.json
components/dispatch-map/v0/.specify/: feature.json
components/dispatch-map/v0/benches/: dispatch_map_benchmark.rs
components/dispatch-map/v0/info/: FUNCTIONAL-DESIGN.md  PROMPT.md  transcript_2151d9ac-fede-4d49-b062-2f3ee3b0621c_2026-04-27.md  transcript_df85200d-dc1f-4ea9-a84a-a76f4dffc239_2026-04-27.md
components/dispatch-map/v0/src/: entry.rs  lib.rs  state.rs
components/dispatch-map/v0/tests/: integration.rs
components/dispatcher/v0/: CLAUDE.md  Cargo.toml  README.md
components/dispatcher/v0/.claude/: settings.json
components/dispatcher/v0/.specify/: feature.json
components/dispatcher/v0/benches/: dispatcher_benchmark.rs
components/dispatcher/v0/info/: FUNCTIONAL-DESIGN.md  PROMPTS.md
components/dispatcher/v0/src/: background.rs  io_segmenter.rs  lib.rs
components/extent-manager/v1/: CLAUDE.md  Cargo.toml  README.md
components/extent-manager/v1/.claude/: settings.json
components/extent-manager/v1/.specify/: feature.json
components/extent-manager/v1/benches/: create_benchmark.rs  iterate_benchmark.rs  lookup_benchmark.rs  remove_benchmark.rs
components/extent-manager/v1/info/: FUNCTIONAL-DESIGN.md  PROMPTS.md
components/extent-manager/v1/src/: bitmap.rs  block_device.rs  error.rs  lib.rs  metadata.rs  recovery.rs  state.rs  superblock.rs  test_support.rs
components/extent-manager/v1/tests/: api_operations.rs  crash_recovery.rs  thread_safety.rs
components/extent-manager/v2/: CLAUDE.md  Cargo.toml  README.md
components/extent-manager/v2/.specify/: feature.json
components/extent-manager/v2/benches/: benchmarks.rs
components/extent-manager/v2/src/: bitmap.rs  block_io.rs  buddy.rs  checkpoint.rs  error.rs  lib.rs  recovery.rs  region.rs  slab.rs  state.rs  superblock.rs  test_support.rs  write_handle.rs
components/extent-manager/v2/tests/: checkpoint.rs  concurrent.rs  edge_cases.rs  lifecycle.rs
components/gpu-services/v0/: CLAUDE.md  Cargo.toml  README.md  build.rs
components/gpu-services/v0/.claude/: settings.json
components/gpu-services/v0/.specify/: feature.json
components/gpu-services/v0/benches/: gpu_services_benchmark.rs
components/gpu-services/v0/info/: FUNCTIONAL-DESIGN.md  PROMPTS.md  transcript_4e620fba-8e61-42ce-8ce1-6c0512639185_2026-04-29.md
components/gpu-services/v0/src/: cuda_ffi.rs  device.rs  dma.rs  ipc.rs  lib.rs  memory.rs
components/interfaces/: Cargo.toml  README.md
components/interfaces/src/: iblock_device.rs  idispatch_map.rs  idispatcher.rs  iextent_manager.rs  iextent_manager_v2.rs  igpu_services.rs  ilogger.rs  lib.rs  spdk_types.rs
components/logger/v1/: CLAUDE.md  Cargo.toml  README.md
components/logger/v1/.claude/: settings.json
components/logger/v1/.specify/: feature.json
components/logger/v1/benches/: log_throughput.rs
components/logger/v1/info/: PROMPT.md
components/logger/v1/src/: lib.rs
components/logger/v1/tests/: integration.rs
components/spdk-env/: CLAUDE.md  Cargo.toml  README.md
components/spdk-env/.specify/integrations/: claude.manifest.json  speckit.manifest.json
components/spdk-env/.specify/memory/: constitution.md
components/spdk-env/examples/: spdk-env-example.rs
components/spdk-env/info/: EXPERIMENT.md  PROMPT.md
components/spdk-env/info/conversations/: claude.001
components/spdk-env/info/costs/: claude.001
components/spdk-env/scripts/: add_kernel_options.sh  bind_vfio.sh  cfg_user_spdk.sh  fix_dnf_cache.sh  show_spdk_devices.sh
components/spdk-env/specs/002-spdk-env-vfio-init/: data-model.md  research.md  spec.md  tasks.md
components/spdk-env/src/: checks.rs  device.rs  dma.rs  env.rs  error.rs  lib.rs
components/spdk-simple-block-device/: CLAUDE.md  Cargo.toml
components/spdk-simple-block-device/.specify/extensions/: .registry
components/spdk-simple-block-device/.specify/memory/: constitution.md
components/spdk-simple-block-device/.specify/sync/: drift-report.json  drift-report.md
components/spdk-simple-block-device/examples/: actor_io.rs  basic_io.rs  iops_bench.rs
components/spdk-simple-block-device/specs/001-basic-block-device/: spec.md
components/spdk-simple-block-device/src/: actor.rs  io.rs  lib.rs
(+248 files in other folders)
