[workspace]
# Paths to sub-projects
members = [
    "components/component-framework/crates/component-core",
    "components/component-framework/crates/component-macros",
    "components/component-framework/crates/component-framework",
    "components/component-framework/examples",
    "components/example-helloworld",
    "components/example-logger",
    "components/spdk-sys",
    "components/spdk-env",
    "components/spdk-simple-block-device",
    "apps/helloworld-mainline",
]

# SPDK crates require pre-built native libraries at deps/spdk-build/.
# They are excluded from default builds so `cargo build` succeeds without
# SPDK deps. Build them explicitly with: cargo build -p spdk-simple-block-device
default-members = [
    "components/component-framework/crates/component-core",
    "components/component-framework/crates/component-macros",
    "components/component-framework/crates/component-framework",
    "components/component-framework/examples",
    "components/example-helloworld",
    "components/example-logger",
    "apps/helloworld-mainline",
]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
component-core = { path = "components/component-framework/crates/component-core" }
component-macros = { path = "components/component-framework/crates/component-macros" }
component-framework = { path = "components/component-framework/crates/component-framework" }
example-logger = { path = "components/example-logger" }
example-helloworld = { path = "components/example-helloworld" }
spdk-sys = { path = "components/spdk-sys" }
spdk-env = { path = "components/spdk-env" }
spdk-simple-block-device = { path = "components/spdk-simple-block-device" }
