[workspace]
# Paths to sub-projects
members = [
    "components/component-framework/crates/component-core",
    "components/component-framework/crates/component-macros",
    "components/component-framework/crates/component-framework",
    "components/component-framework/examples",
    "components/example-helloworld",
    "components/spdk-sys",
    "components/interfaces",
    "components/spdk-env",
    "apps/helloworld-mainline",
    "apps/iops-benchmark",
    "apps/extent-benchmark",
    "components/block-device-spdk-nvme/v1",
    "components/extent-manager/v2",
    "components/logger/v1"
]

# SPDK crates require pre-built native libraries at deps/spdk-build/.
# They are excluded from default builds so `cargo build` succeeds without
# SPDK deps. Build them explicitly with: cargo build -p block-device-spdk-nvme
default-members = [
    "components/component-framework/crates/component-core",
    "components/component-framework/crates/component-macros",
    "components/component-framework/crates/component-framework",
    "components/component-framework/examples",
    "components/example-helloworld",
    "apps/helloworld-mainline",
    "components/logger/v1"
]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
component-core = { path = "components/component-framework/crates/component-core" }
component-macros = { path = "components/component-framework/crates/component-macros" }
component-framework = { path = "components/component-framework/crates/component-framework" }
example-helloworld = { path = "components/example-helloworld" }
interfaces = { path = "components/interfaces" }
spdk-sys = { path = "components/spdk-sys" }
spdk-env = { path = "components/spdk-env" }
block-device-spdk-nvme = { path = "components/block-device-spdk-nvme/v1" }
logger = { path = "components/logger/v1" }


