[package]
name = "extent-benchmark"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
block-device-spdk-nvme.workspace = true
component-core.workspace = true
component-framework.workspace = true
interfaces = { workspace = true, features = ["spdk"] }
spdk-env.workspace = true
extent-manager-v2 = { path = "../../components/extent-manager/v2" }
clap = { version = "4", features = ["derive"] }
