[package]
name = "iops-benchmark-md"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
block-device-spdk-nvme.workspace = true
block-device-spdk-nvme-v2.workspace = true
component-core.workspace = true
component-framework.workspace = true
interfaces = { workspace = true, features = ["spdk"] }
spdk-env.workspace = true
clap = { version = "4", features = ["derive"] }
rand = "0.8"
