[package]
name = "iops-benchmark"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
block-device-spdk-nvme.workspace = true
component-core.workspace = true
component-framework.workspace = true
interfaces = { workspace = true, features = ["spdk"] }
spdk-env.workspace = true
example-logger.workspace = true
clap = { version = "4", features = ["derive"] }
rand = "0.8"
