[package]
name = "interfaces"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
component-core.workspace = true
component-macros.workspace = true
spdk-sys = { workspace = true, optional = true }

[features]
default = []
spdk = ["dep:spdk-sys"]
gpu = []
