[package]
name = "block-device-spdk-nvme"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SPDK NVMe block device component with actor model, async IO, and telemetry"

[features]
default = []
telemetry = []

[dependencies]
component-core.workspace = true
component-macros.workspace = true
component-framework.workspace = true
interfaces = { workspace = true, features = ["spdk"] }
spdk-sys.workspace = true
spdk-env.workspace = true
example-logger.workspace = true
crossbeam-channel = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "throughput"
harness = false
