[package]
name = "block-device-spdk-nvme-v2"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SPDK NVMe block device component with actor model, async IO, and telemetry"

[features]
default = []
telemetry = []
spdk-test = []

[dependencies]
component-core.workspace = true
component-macros.workspace = true
component-framework.workspace = true
interfaces = { workspace = true, features = ["spdk"] }
spdk-sys.workspace = true
spdk-env.workspace = true
crossbeam-channel = "0.5"
logger.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "throughput"
harness = false
