[package]
name = "dispatch-map"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
component-framework.workspace = true
component-core.workspace = true
component-macros.workspace = true
interfaces = { workspace = true, features = ["spdk"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dispatch_map_benchmark"
harness = false
