[package]
name = "extent-manager"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false

[dependencies]
component-framework = { path = "../../component-framework/crates/component-framework" }
component-core = { path = "../../component-framework/crates/component-core" }
component-macros = { path = "../../component-framework/crates/component-macros" }
interfaces = { path = "../../interfaces" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
extent-manager = { path = ".", features = ["testing"] }

[features]
default = ["spdk"]
spdk = ["interfaces/spdk"]
testing = []

[[bench]]
name = "create_benchmark"
harness = false

[[bench]]
name = "lookup_benchmark"
harness = false

[[bench]]
name = "remove_benchmark"
harness = false

[[bench]]
name = "count_benchmark"
harness = false
