[package]
name = "extent-manager"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
component-core.workspace = true
component-macros.workspace = true
component-framework.workspace = true
interfaces = { workspace = true, features = ["spdk"] }
crc32fast = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
extent-manager = { path = ".", features = ["testing"] }

[features]
default = ["spdk"]
spdk = []
testing = []

[[bench]]
name = "create_benchmark"
harness = false

[[bench]]
name = "remove_benchmark"
harness = false

[[bench]]
name = "lookup_benchmark"
harness = false

[[bench]]
name = "iterate_benchmark"
harness = false
