[package]
name = "extent-manager-v2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
component-core.workspace = true
component-macros.workspace = true
component-framework.workspace = true
interfaces = { workspace = true, features = ["spdk"] }
crc32fast = "1"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
extent-manager-v2 = { path = ".", features = ["testing"] }

[features]
default = ["spdk"]
spdk = []
testing = []

[[bench]]
name = "benchmarks"
harness = false
