[package]
name = "gpu-services"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
gpu = ["interfaces/gpu", "base64", "libc"]

[dependencies]
component-framework.workspace = true
component-core.workspace = true
component-macros.workspace = true
interfaces.workspace = true
logger.workspace = true
base64 = { version = "0.22", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gpu_services_benchmark"
harness = false
required-features = ["gpu"]
