[package]
name = "logger"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
component-framework.workspace = true
component-core.workspace = true
component-macros.workspace = true
interfaces.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "log_throughput"
harness = false
